Adding more ss to eval page and finishing genesis file.

--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -30,17 +30,6 @@
             Optimize your sourcing 
           %p.be_bold 
             Never waste your time in an interview again. MetaBright's <strong>Evaluator</strong> measures and verfies the skills of your job candidates <span style="font-family: 'MuliItalic';">before</span> you interview them. Just direct your candidates to your unique MetaBright URL, and we take care of the rest.  
-          #screen_carousel.carousel.slide 
-            .carousel-inner 
-              .active.item 
-                %img{ src: "http://media.moddb.com/images/mods/1/5/4119/17574.jpg" } 
-              .item 
-                %img{ src: "http://img.gawkerassets.com/img/18j1x0zv2nijtjpg/ku-xlarge.jpg" } 
-              .item 
-                %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade_page.png" } 
-            %a.carousel-control.left{"data-slide" => "prev", :href => "#screen_carousel"} ‹ 
-            %a.carousel-control.right{"data-slide" => "next", :href => "#screen_carousel"} › 
-         
         .sexy_time 
           %section 
             .holder  
@@ -104,6 +93,22 @@
             .circle 
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/clock_green.png" 
             %p Never waste your time interviewing another underqualified candidate. 
+        #screen_carousel.carousel.slide 
+          .carousel-inner 
+            .active.item 
+              %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade_page.png" } 
+            .item 
+              %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/arena.png" } 
+            .item 
+              %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/challenge.png" } 
+            .item 
+              %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/evaluator.png" }              .item 
+            .item
+              %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/submissions.png" } 
+            .item
+              %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/manager.png" }
+          %a.carousel-control.left{"data-slide" => "prev", :href => "#screen_carousel"} ‹ 
+          %a.carousel-control.right{"data-slide" => "next", :href => "#screen_carousel"} ›
         .area{ style: "margin-bottom: 60px;"} 
           %h2{ style: "margin-bottom: 50px;" }  
             Evaluator Pricing 
