--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -102,7 +102,7 @@
             .item 
               %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/challenge.png" } 
             .item 
-              %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/evaluator.png" }              .item 
+              %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/evaluator.png" }
             .item
               %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/submissions.png" } 
             .item
