--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -10,40 +10,40 @@
     });
   });
 
-%div#settings_modal.modal.hide.fade{ style: "top: 10%; margin-top: 0px; width: 600px;" }
-  %div.modal-header
+#settings_modal.modal.hide.fade{ style: "top: 10%; margin-top: 0px; width: 600px;" }
+  .modal-header
     %a.close
     %h3 Challenge Settings
-  %div.modal-body{ style: "max-height: none; "}
+  .modal-body{ style: "max-height: none; "}
     = form_for(@path, html: { class: "form-horizontal" }) do |f|
       = render "shared/error_messages", object: f.object
-      %div.control-group
+      .control-group
         %label.control-label Challenge Name
-        %div.controls= f.text_field :name
+        .controls= f.text_field :name
       - unless @group
-        %div.control-group
+        .control-group
           %label.control-label Description (Optional)
-          %div.controls= f.text_area :description, style: "width: 350px;", rows: "3", placeholder: "Try to describe this Challenge to others in a few sentences..."
+          .controls= f.text_area :description, style: "width: 350px;", rows: "3", placeholder: "Try to describe this Challenge to others in a few sentences..."
       - if @enable_administration
-        %div.control-group
+        .control-group
           %label.control-label Default code template (Optional)
-          %div.controls= f.text_area :template, style: "width: 350px;", rows: "7", placeholder: "This is the default template to appear for each newly created CR. It can always be edited for each question."
-      %div.control-group{ style: "margin-bottom: 5px;" }
+          .controls= f.text_area :template, style: "width: 350px;", rows: "7", placeholder: "This is the default template to appear for each newly created CR. It can always be edited for each question."
+      .control-group{ style: "margin-bottom: 5px;" }
         %label.control-label Image (Optional)
-        %div.controls= render "stored_resources/new_image"      
-      %div.control-group
-        %div.controls= image_tag(@path.path_pic, class: "original_image_preview", style: "height: 75px; max-width: 150px;")
+        .controls= render "stored_resources/new_image"      
+      .control-group
+        .controls= image_tag(@path.path_pic, class: "original_image_preview", style: "height: 75px; max-width: 150px;")
       - if current_user.id == @path.user_id
-        %div.control-group{ style: "margin-bottom: 10px;" }
+        .control-group{ style: "margin-bottom: 10px;" }
           %label.control-label Custom CSS
-          %div.controls{ style: "margin-top: 6px;" }= link_to "Customize Challenge Styles", style_path_path(@path.permalink), style: "line-height:18px; padding-top: 5px;"
-        %div.control-group{ style: "margin-bottom: 10px;" }
+          .controls{ style: "margin-top: 6px;" }= link_to "Customize Challenge Styles", style_path_path(@path.permalink), style: "line-height:18px; padding-top: 5px;"
+        .control-group{ style: "margin-bottom: 10px;" }
           %label.control-label Permanently delete Challenge
-          %div.controls{ style: "margin-top: 6px;" }= link_to "Delete", path_url(@path), method: :delete, confirm: "Are you sure you want to delete this Challenge? The Challenge will be removed from all your Evaluations and all candidate information collected with this Challenge will be deleted. This action is irreversible.", style: "line-height:18px; padding-top: 5px;"
+          .controls{ style: "margin-top: 6px;" }= link_to "Delete", path_url(@path), method: :delete, confirm: "Are you sure you want to delete this Challenge? The Challenge will be removed from all your Evaluations and all candidate information collected with this Challenge will be deleted. This action is irreversible.", style: "line-height:18px; padding-top: 5px;"
       - if false
-        %div.control-group{ style: "margin-bottom: 5px;" }
+        .control-group{ style: "margin-bottom: 5px;" }
           %label.control-label Collaborators
-          %div.controls= link_to "View and add collaborators", collaborator_path_path(@path.permalink), style: "line-height:18px;"
+          .controls= link_to "View and add collaborators", collaborator_path_path(@path.permalink), style: "line-height:18px;"
       %hr{ style: "margin: 10px 0; "}
       %div{ style: "float:right;" }
         %span.button.button-standard{ onclick: "$('#settings_modal').modal('hide');" } Close
@@ -51,20 +51,20 @@
 
 - @sections.each do |s|
   %div{ id: "section_settings_modal_#{s.id}", class: "modal hide fade", style: "top: 50%;" }
-    %div.modal-header
+    .modal-header
       %a.close
       %h3 Section Settings
-    %div.modal-body
+    .modal-body
       = form_for(s, html: { class: "form-horizontal" }) do |f|
-        %div.control-group
+        .control-group
           %label.control-label Name
-          %div.controls= f.text_field :name, class: "xlarge"
-        %div.control-group
+          .controls= f.text_field :name, class: "xlarge"
+        .control-group
           %label.control-label Points to unlock
-          %div.controls= f.text_field :points_to_unlock, placeholder: "optional..."
-        %div.control-group
+          .controls= f.text_field :points_to_unlock, placeholder: "optional..."
+        .control-group
           %label.control-label Delete Section
-          %div.controls{ style: "padding-top: 8px;" }= link_to "Delete", confirm_delete_section_path(s)
+          .controls{ style: "padding-top: 8px;" }= link_to "Delete", confirm_delete_section_path(s)
         %div{ style: "float:left; margin: 20px 20px 0px 0;" }
           - if s.published_at
             = link_to "Unpublish", unpublish_section_path(s), class: "button button-info", confirm: "Are you sure you want to unpublish this section?"
@@ -89,13 +89,13 @@
           = image_tag(@path.path_pic, class: "small-header-image")
       %div{ style: "display: inline-block; vertical-align: middle;" }
         %h1.editable{ style: "margin:0px;", title: "Click to edit" }= @path.name
-      %div.floatr{ style: "margin-top:10px; vertical-align: middle;"} 
+      .floatr{ style: "margin-top:10px; vertical-align: middle;"} 
         - if @path.group_id
           .controls{ style: "margin-top: 10px;" }
             %div{ style: "display: inline-block;" }
               = link_to new_group_evaluation_path(@group) do
                 = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", style: "height: 20px; width: 20px; margin-right: 10px;"
-            %div.edit_path_settings_button{ onclick: "$('#settings_modal').modal({keyboard: true, show: true})", style: "display: inline-block;" }
+            .edit_path_settings_button{ onclick: "$('#settings_modal').modal({keyboard: true, show: true})", style: "display: inline-block;" }
               %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Edit Evaluation", style: "height: 20px; width: 20px; cursor: pointer;"}
         - else
           - if @path.published? && @path.approved?
@@ -126,7 +126,7 @@
                           %a.edit_section_questions_pill{ onclick: "display_section_questions($(this).parents('td.section'));", style:"cursor:pointer;" } Questions
                         %li
                           %a.edit_section_settings_pill{ onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});", style:"cursor:pointer;" } Settings
-                  %div.span6{ style: "margin-left: 12px;"}
+                  .span6{ style: "margin-left: 12px;"}
                     - if @group
                       %h3 Challenge questions
                     - else
@@ -140,5 +140,5 @@
                           %span#question_counter #{s.achievement_tasks.size} Achievements
                         - unless s.published_at
                           %span.label.warning{ style: "font-size: 12px; vertical-align:middle; background-color: #0069D6;" } draft
-                %div.section_questions_container.row{ style: "display:none;" }
+                .section_questions_container.row{ style: "display:none;" }
                   = render "sections/edit_tasks", { section: s, tasks: s.tasks, display_new_task_form: true }
