--- a/app/views/tasks/_task.html.haml
+++ b/app/views/tasks/_task.html.haml
@@ -1,5 +1,5 @@
 %div.question_display{ id: move ? "must_move" : "" }
-  %div.edit_task_buttons{ style: "float:right; margin-top:5px; " }
+  %div.edit_task_buttons.floatr
     - if task.creator == current_user or @path.user_id == current_user.id or @enable_administration
       .btn-group
         = link_to "Edit", edit_task_path(task.id), remote: true, class: "btn edit_button loadable"
@@ -32,9 +32,12 @@
       %blockquote{ style: "margin-top:0px; width:77%;" }
         %pre{ style:"word-break:normal;" }= task.template
   %div{ style: "position: relative; bottom: 0px; margin-left: 45px; font-size: 11px;"}
+    = difficulty_label(task)
     - unless task.topic_id.to_i == 0
-      %p Topic: #{task.topic.name}
+      |
+      %span Topic: #{task.topic.name}
     - unless task.resource.blank?
+      |
       = link_to "Source: "+task.resource_title, task.resource, target: "_blank"
   
   - if move
