--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -109,7 +109,7 @@
               %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/manager.png" }
           %a.carousel-control.left{"data-slide" => "prev", :href => "#screen_carousel"} ‹ 
           %a.carousel-control.right{"data-slide" => "next", :href => "#screen_carousel"} ›
-        .area{ style: "margin-bottom: 60px;"} 
+        .area
           %h2{ style: "margin-bottom: 50px;" }  
             Evaluator Pricing 
           %div   
@@ -168,9 +168,9 @@
         .area 
           %h2 
             Our philosophy 
-          %p 
+          %p.be_bold
             When evaluating a potential new-hire, we believe the most important thing is whether that person has the skills necessary to do the job. Things like where they went to school or where they previously worked are just distractions from what really matters: Can they perform? 
-        .area 
+        .area
           %h2 FAQ 
           #faq_accordion.accordion           
             .accordion-group 
@@ -188,6 +188,13 @@
               #collapseFour.accordion-body.collapse 
                 .accordion-inner 
                   Each Challenge can be completed in less than 10 minutes. 
+            .accordion-group 
+              .accordion-heading 
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFour"} 
+                  Do I have to sign up for a contract or pre-pay for my Evaluator subscription? 
+              #collapseFour.accordion-body.collapse 
+                .accordion-inner 
+                  Nope! Evaluator subscriptions are month-to-month. There are no contracts or obligations to continue your membership any longer than you want. You'll be billed monthly and can cancel anytime.
             .accordion-group 
               .accordion-heading 
                 %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFive"} 
