--- a/app/views/tasks/_take_text.html.haml
+++ b/app/views/tasks/_take_text.html.haml
@@ -72,7 +72,7 @@
     $submit.addClass("disabled").attr("disabled", "disabled");
   }
   
-- if @task.time_limit
+- if @path.group_id and @task.time_limit
   :javascript
     var time_limit = #{@task.time_limit};
     $(function(){
