--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -187,7 +187,7 @@
                   How long will it take for my candidates to complete a Challenge? 
               #collapseFour.accordion-body.collapse 
                 .accordion-inner 
-                  Each Challenge can be completed in less than 10 minutes. 
+                  It depends on the Challenge, and the skill of the candidate, but most Challenges can be completed in under 20 minutes.
             .accordion-group 
               .accordion-heading 
                 %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFour"} 
