--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -121,8 +121,9 @@
                     %span.price_number $9.99 
                     %span.price_tenure per month 
                 %ul.features 
-                  %li Unlimited Evaluations and Candidates 
-                  %li Premium Support 
+                  %li Unlimited Evaluations
+                  %li Unlimited Candidates 
+                  %li Email Support
                 .price_footer 
                   = link_to "Select", new_group_path(p: Group::SINGLE_PLAN), class: "action_button" 
               %li.price_block.popular 
@@ -135,8 +136,9 @@
                     %span.price_number $19.99 
                     %span.price_tenure per month 
                 %ul.features 
-                  %li Unlimited Evaluations and Candidates 
-                  %li Premium Support 
+                  %li Unlimited Evaluations
+                  %li Unlimited Candidates 
+                  %li Premium Phone and Email Support
                 .price_footer 
                   = link_to "Select", new_group_path(p: Group::TWO_TO_FIVE_PLAN), class: "action_button" 
               %li.price_block 
@@ -146,8 +148,9 @@
                     %span.price_number $39.99 
                     %span.price_tenure per month 
                 %ul.features 
-                  %li Unlimited Evaluations and Candidates 
-                  %li Premium Support 
+                  %li Unlimited Evaluations
+                  %li Unlimited Candidates 
+                  %li Premium Phone and Email Support
                 .price_footer 
                   = link_to "Select", new_group_path(p: Group::SIX_TO_FIFTEEN_PLAN), class: "action_button" 
               %li.price_block 
@@ -157,15 +160,16 @@
                     %span.price_number $79.99 
                     %span.price_tenure per month 
                 %ul.features 
-                  %li Unlimited Evaluations and Candidates 
-                  %li Premium Support 
+                  %li Unlimited Evaluations
+                  %li Unlimited Candidates  
+                  %li Premium Phone and Email Support
                 .price_footer 
                   = link_to "Select", new_group_path(p: Group::SIXTEEN_TO_FIFTY_PLAN), class: "action_button" 
             %div{ style: "margin-top: -30px; "} 
               %p{ style: "margin: 0; float: right;"} 
                 Have more than 50 users?  
                 %a{href: "mailto:support@metabright.com?subject=Inquiry for more than 50 Evaluator users"}Contact us for pricing. 
-        .area 
+        .area{ style: "margin-top: 110px;"} 
           %h2 
             Our philosophy 
           %p.be_bold
