--- a/app/views/groups/_account_table.html.haml
+++ b/app/views/groups/_account_table.html.haml
@@ -43,8 +43,9 @@
         %td= truncate(u.name, length: 30)
         %td= truncate(u.email, length:25)
         %td{ style: "text-align: right;" } Joined #{u.created_at.strftime("%m/%d/%Y")}
-        %td.edit_user_details_link{ onclick: "$('.group_admin_modal[data-user=#{u.id}]').modal({keyboard: true, show: true})", style: "text-align: right; cursor: pointer;" }
-          %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", title:"Settings", alt: "Settings"}
+        %td.edit_user_details_link{ onclick: "$('.group_admin_modal[data-user=#{u.id}]').modal({keyboard: true, show: true})"}
+          %div{"data-tip" => "User Settings"}
+            %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Settings"}
     - if @users.empty?
       %tr
         %td{ colspan: "3", style: "border-bottom: 0; font-size; 13px;" }
