--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -1,5 +1,6 @@
 :css 
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; } 
+  .container.body { width: 980px; }
   .aboutcontainer{ width: 980px; background: rgba(36, 72, 109, 0.8); border-radius: 0; margin-top:27px;} 
   .aboutbox { border-radius: 0; padding: 20px 20px 0; } 
   #screen_carousel { width: 700px; height: 400px; margin: 30px auto; } 
