Back button on signup form and new feedback modal.

--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -70,5 +70,6 @@
         %p.errors= @errors
         .control-group{ style: "margin-top: -10px; "}
           %p.in-progress.hide Creating your account now. This may take a minute or two...
-          .controls
-            = f.submit "Submit", class: "submit_button", style: "width: inherit;"
+          = link_to evaluator_url do
+            = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", class: "gear", style: "height: 30px;"
+          = f.submit "Submit", class: "submit_button", style: "width: inherit;"
