--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1175,6 +1175,12 @@ ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; margin-bottom: 15px; cur
         color: white;
         margin-bottom: 17px;
       }
+      .gear {
+        opacity: 0.7;
+        height: 30px;
+        width: 30px;
+        &:hover { opacity: 1; }
+      }
       .control-group {
         margin: 0;
         
