--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -71,5 +71,5 @@
         .control-group{ style: "margin-top: -10px; "}
           %p.in-progress.hide Creating your account now. This may take a minute or two...
           = link_to evaluator_url do
-            = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", class: "gear", style: "height: 30px;"
+            = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", class: "gear", title: "back"
           = f.submit "Submit", class: "submit_button", style: "width: inherit;"
