making arena faq easier to read

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1704,7 +1704,7 @@ ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; margin-bottom: 15px; cur
     margin-top: 10px; 
     margin-left: 10px; 
     
-    span { font-weight: bold; }
+    span { font-weight: bold; font-family: 'MuliRegular';}
     ul { margin-top: -10px; } 
   }
 }
